# inference-profiler

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: cpp-tests.yml
Plotting/: README.md  fix.py
Plotting/throughput_per_batch/: throughput_per_batch.gnu
Plotting/time_per_batch/: time_per_batch.gnu
cpp/: CMakeLists.txt
cpp/include/: backend_base.h  benchmarker.h  comparator.h  custom_concepts.h  data_provider.h  main.h  median.h  metrics.h  onnx_model.h  torch_model.h
cpp/src/: ci_testing.cpp  data_provider.cpp  main.cpp  onnx_model.cpp  torch_model.cpp
model_files/: function_model.pt
onnx_file/: function_model.onnx
